--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">3130Project</string>
     <string name="WelcomeButton">Welcome!</string>
+    <string name="title_activity_edit_profile">EditProfileActivity</string>
 </resources>
