--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="back_button_desc">BackButtonDescription</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_activity_med_perscription_fragment">MedPerscriptionFragment</string>
+    <string name="tab_text_1">My Meds</string>
+    <string name="tab_text_2">All Meds</string>
+    <string name="title_activity_med_fragment">MedFragment</string>
 </resources>
