(REF) (Jordan,Anan) Refactored the Prescription class to use getter and setter methods

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="tab_text_1">My Meds</string>
     <string name="tab_text_2">All Meds</string>
     <string name="title_activity_med_fragment">MedFragment</string>
+    <string name="mon">Monday</string>
+    <string name="tue">Tuesday</string>
+    <string name="wed">Wednesday</string>
+    <string name="thu">Thursday</string>
+    <string name="fri">Friday</string>
+    <string name="sat">Saturday</string>
+    <string name="sun">Sunday</string>
 </resources>
