--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">3130Project</string>
+    <string name="app_name">Medication Management</string>
     <string name="WelcomeButton">Welcome!</string>
-    <string name="title_activity_edit_profile">EditProfileActivity</string>
+    <string name="title_activity_edit_profile">Edit Profile</string>
     <string name="title_activity_test">test</string>
     <string name="preference_file">com.example.a3130project.PreferenceKey</string>
     <string name="saved_alarms_allowed">AlarmsAllowed</string>
@@ -13,11 +13,11 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="back_button_desc">BackButtonDescription</string>
-    <string name="title_activity_navigation">NavigationActivity</string>
-    <string name="title_activity_med_perscription_fragment">MedPerscriptionFragment</string>
+    <string name="title_activity_navigation">Medication Management</string>
+    <string name="title_activity_med_perscription_fragment">Manage Prescriptions</string>
     <string name="tab_text_1">My Meds</string>
     <string name="tab_text_2">All Meds</string>
-    <string name="title_activity_med_fragment">MedFragment</string>
+    <string name="title_activity_med_fragment">Manage Meds</string>
     <string name="mon">Monday</string>
     <string name="tue">Tuesday</string>
     <string name="wed">Wednesday</string>
